--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-flask
-langchain
-langchain-huggingface
-langchain-groq
-langchain_community
-pypdf
-faiss-cpu
 scikit-learn
-Werkzeug
+langchain-huggingface
+langchain
+langchain-community
+faiss-cpu
+unstructured
+pypdf
+langchain-groq
+flask
 streamlit
+psycopg2-binary
+typing-extensions
+uuid
